--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -8,5 +8,6 @@
 
 /*Home*/
 @import "./home/introducao.css";
+@import "./home/tecnologia.css";
 /*bicicletas*/
 @import "./bicicletas/bicicletas-lista.css";
