--- a/CSS/global/header.css
+++ b/CSS/global/header.css
@@ -8,11 +8,8 @@
   gap: 1.25rem;
   justify-content: space-between;
   align-items: center;
-  padding: 1.25rem;
-  box-sizing: border-box;
-  max-width: 75rem;
-  margin-left: auto;
-  margin-right: auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .header-menu {
