--- a/CSS/global/global.css
+++ b/CSS/global/global.css
@@ -2,6 +2,7 @@ body {
   margin: 0rem;
   font-family: Arial, Helvetica, sans-serif;
   height: 2000px;
+  padding-bottom: 600px;
   color: #111;
 }
 
@@ -10,7 +11,8 @@ h2,
 h3,
 h4,
 ul,
-p {
+p,
+blockquote {
   margin: 0px;
 }
 ul {
