--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -13,3 +13,5 @@
 @import "./home/depoimento.css";
 /*bicicletas*/
 @import "./bicicletas/bicicletas-lista.css";
+/*bicicletas*/
+@import "/CSS/Seguros/seguros.css";
