--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -15,6 +15,8 @@
 /*bicicletas*/
 @import "./bicicletas/bicicletas-lista.css";
 @import "./bicicletas/bicicletas.css";
+/*bicicletas*/
+@import "./bicicleta/bicicleta.css";
 /*Seguros*/
 @import "/CSS/Seguros/seguros.css";
 @import "/CSS/Seguros/vantagens.css";
