--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -15,8 +15,9 @@
 /*bicicletas*/
 @import "./bicicletas/bicicletas-lista.css";
 @import "./bicicletas/bicicletas.css";
-/*bicicletas*/
+/*bicicleta*/
 @import "./bicicleta/bicicleta.css";
+@import "./bicicleta/seguro.css";
 /*Seguros*/
 @import "/CSS/Seguros/seguros.css";
 @import "/CSS/Seguros/vantagens.css";
