--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -6,7 +6,7 @@
 @import "./global/footer.css";
 /*Utilidades*/
 @import "./utilidades/componentes.css";
-
+@import "./utilidades/formulario.css";
 /*Home*/
 @import "./home/introducao.css";
 @import "./home/tecnologia.css";
@@ -18,6 +18,9 @@
 /*bicicleta*/
 @import "./bicicleta/bicicleta.css";
 @import "./bicicleta/seguro.css";
+/*Contato*/
+@import "./contato/contato.css";
+@import "./contato/lojas.css";
 /*Seguros*/
 @import "/CSS/Seguros/seguros.css";
 @import "/CSS/Seguros/vantagens.css";
