--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -21,6 +21,8 @@
 /*Contato*/
 @import "./contato/contato.css";
 @import "./contato/lojas.css";
+/*orçamento*/
+@import "/CSS/orcamento/orcamento.css";
 /*Seguros*/
 @import "/CSS/Seguros/seguros.css";
 @import "/CSS/Seguros/vantagens.css";
